# json_to_equipment_editor

./: .gitignore  CMakeLists.txt  README.md
config/: equipment_config.json
src/: ConfigEditorDialog.cpp  ConfigEditorDialog.h  DeviceInstance.cpp  DeviceInstance.h  DeviceTabWidget.cpp  DeviceTabWidget.h  EquipmentConfigWidget.cpp  EquipmentConfigWidget.h  EquipmentType.cpp  EquipmentType.h  ParameterEditDialog.cpp  ParameterEditDialog.h  ParameterItem.cpp  ParameterItem.h  RuleEditorDialog.cpp  RuleEditorDialog.h  StyleHelper.h  TypeEditDialog.cpp  TypeEditDialog.h  WorkStateTabWidget.cpp  WorkStateTabWidget.h  WorkStateTemplate.cpp  WorkStateTemplate.h  main.cpp
